# evalshape

./: CMakeLists.txt  LICENSE  README.md
src/lib/algorithm/: CMakeLists.txt
src/lib/algorithm/evaluation/: ShapeError.cpp  ShapeError.h
src/lib/boundary/: CMakeLists.txt
src/soft/: CMakeLists.txt
src/soft/soft_2dskeletonization/: CMakeLists.txt  main.cpp
src/soft/soft_evalshape/: CMakeLists.txt  main.cpp
src/utils/fileio/: BoundaryFile2D.cpp  BranchFile.cpp  BranchFile.h  CMakeLists.txt  ExportOCaml.cpp  ExportOCaml.h  ExportSVG.cpp  ExportSVG.h  ExtClickFile.cpp  ExtClickFile.h  SkeletonFile.cpp  SkeletonFile.h
